<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ComicDetActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkBlue">

        <ImageView
            android:id="@+id/ivCardComic"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/redBar"/>

        <ImageView
            android:id="@+id/ivComic"
            android:layout_width="110dp"
            android:layout_height="150dp"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivCardComic"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintVertical_bias="0.250" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarDet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00EA2427"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp" >

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_arrow_back">
            </ImageView>
        </androidx.appcompat.widget.Toolbar>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp"
            app:layout_constraintTop_toBottomOf="@id/ivComic"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/comicTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comicTitle"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/comicDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comicDescription"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/tvPublishedComic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comicPublished"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginRight="7dp"/>
                <TextView
                    android:id="@+id/tvDatePublishComic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/dateComic"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/tvPriceComic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comicPrice"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginRight="7dp"/>
                <TextView
                    android:id="@+id/PriceValueComic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/comicValuePrice"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/tvPagesComic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comicPages"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginRight="7dp"/>
                <TextView
                    android:id="@+id/NumPagesComic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/comicNumberPages"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>